--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,12 @@ button {
 button:hover {
     background-color: #218838;
 }
+
+p {
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+.hidden {
+    display: none;
+}
