--- a/styles.css
+++ b/styles.css
@@ -75,4 +75,34 @@ button.removeProduct {
 button.removeProduct:hover {
     background-color: darkred;
 }
+.hidden {
+    display: none;
+}
+
+.sub-option-group {
+    margin-top: 10px;
+}
+
+.sub-option-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.sub-option-group select {
+    width: 100%;
+}
+
+button.removeProduct {
+    margin-top: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+button.removeProduct:hover {
+    background-color: darkred;
+}
+
 
