--- a/products.css
+++ b/products.css
@@ -49,6 +49,7 @@ body {
 
 .options {
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .options h2 {
@@ -56,8 +57,18 @@ body {
     margin-bottom: 10px;
 }
 
-.options div {
+.option-group {
+    margin-bottom: 20px;
+}
+
+.option-group h3 {
+    font-size: 1.2rem;
     margin-bottom: 10px;
+}
+
+.option-group label {
+    display: block;
+    margin-bottom: 5px;
 }
 
 .add-to-cart {
