--- a/products.css
+++ b/products.css
@@ -1,3 +1,10 @@
+:root {     
+    --color-primary: #fde428;
+    --color-primaryd: #fde428b2;
+    --color-secundary: #e42000;
+
+ }
+
 /* products.css */
 body {
     font-family: Arial, sans-serif;
@@ -14,7 +21,7 @@ body {
 }
 
 .back-button {
-    background: none;
+    background: red;
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
@@ -111,4 +118,32 @@ body {
         padding: 10px;
         font-size: 0.9rem;
     }
+}
+
+
+/* Estilo para el botón flotante del carrito */
+#cart-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--color-primary);
+    color: black;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000; /* Asegura que esté encima de otros elementos */
+    display: flex;
+    align-items: center;
+}
+
+#cart-total {
+    background-color: var(--color-secundary);
+    color: white;
+    padding: 2px 5px;
+    border-radius: 12px;
+    margin-left: 8px;
+    font-size: 14px;
 }
