--- a/cart.css
+++ b/cart.css
@@ -7,7 +7,6 @@ body {
 
 h1 {
     text-align: center;
-    color: #333;
 }
 
 #cart-items {
@@ -22,11 +21,6 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.cart-item div {
-    display: flex;
-    flex-direction: column;
 }
 
 .cart-item button.remove-item {
@@ -46,18 +40,16 @@ h1 {
     text-align: right;
     font-size: 1.2rem;
     margin-top: 20px;
-    color: #333;
 }
 
 button {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
-    font-size: 1rem;
-    color: #fff;
     background-color: #007bff;
+    color: #ffffff;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
     cursor: pointer;
 }
 
