--- a/cart.css
+++ b/cart.css
@@ -8,26 +8,40 @@ h1 {
 }
 
 #cart-items {
-    margin-top: 20px;
+    margin-top: 2px;
 }
 
 .cart-item {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 
-.cart-item-title, .cart-item-size, .cart-item-options, .cart-item-quantity, .cart-item-price {
-    margin-bottom: 5px;
+.cart-item-row {
+    padding: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 0px;
+}
+
+.cart-item-title {
+    flex-grow: 1; /* Toma el espacio restante */
+    font-weight: bold;
+}
+
+.cart-item-price {
+    margin-left: 10px;
 }
 
 .remove-item {
-    background-color: red;
-    color: white;
+    margin: 0px;
+    padding: 0px;
+    background: none;
     border: none;
-    padding: 5px 10px;
+    color: red;
     cursor: pointer;
+    font-size: 1.2em; /* Tamaño del ícono */
 }
+
 
 .remove-item:hover {
     background-color: darkred;
