--- a/products.css
+++ b/products.css
@@ -34,6 +34,11 @@ body {
     border-radius: 10px;
 }
 
+.product-info .price {
+    margin-left: 10px;
+    font-weight: normal; /* Ajusta el peso de la fuente si es necesario */
+}
+
 .product-info {
     background-color: #ffffff;
     border-radius: 10px;
@@ -44,8 +49,8 @@ body {
 }
 
 .product-info h1 {
-    margin: 0 0 10px;
-    font-size: 2rem;
+    display: flex;
+    align-items: center;
 }
 
 .product-info p {
@@ -119,8 +124,6 @@ body {
         font-size: 0.9rem;
     }
 }
-
-
 /* Estilo para el botón flotante del carrito */
 #cart-button {
     position: fixed;
@@ -129,21 +132,33 @@ body {
     background-color: var(--color-secundary);
     color: black;
     border: none;
-    padding: 10px 15px;
-    border-radius: 50%;
+    padding: 10px;
+    border-radius: 50px; /* Cambiado a 50px para hacer el botón más ovalado */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    font-size: 24px;
+    font-size: 16px; /* Ajusta el tamaño del texto */
     cursor: pointer;
-    z-index: 1000; /* Asegura que esté encima de otros elementos */
+    z-index: 1000;
     display: flex;
     align-items: center;
 }
 
+#cart-icon {
+    font-size: 24px; /* Ajusta el tamaño del icono */
+    margin-right: 8px; /* Espacio entre el icono y el texto */
+}
+
+#cart-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#item-count {
+    font-size: 16px;
+    color: white;
+}
+
 #cart-total {
-    background-color: var(--color-primary);
-    color: black;
-    padding: 2px 5px;
-    border-radius: 12px;
-    margin-left: 8px;
     font-size: 14px;
+    color: white;
 }
