--- a/cart.css
+++ b/cart.css
@@ -1,3 +1,12 @@
+:root {     
+    --color-primary: #fdbc00;
+    --color-box: #fde428;
+    --color-primaryd: #fde428b2;
+    --color-secundary: #e42000;
+    --color-logo: #fdbc00;
+
+ }
+
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
@@ -23,6 +32,7 @@ body {
 h1 {
     text-align: center;
 }
+
 
 #cart-items {
     margin-top: 2px;
